--- a/Blogs.html
+++ b/Blogs.html
@@ -59,20 +59,24 @@
 
         <section>
         <div class="cards-wrapper">
-            <div class="card">
+          <div class="card" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+            <a href="https://twinkal.notion.site/My-Journey-to-learning-React-83df9aebbff94005bfc431d0d746ffb4">
               <h1>My Journey to learning React!!</h1>
-              <p>From selling react developers in my sales career to learning the REACT, all I had at the starting point was fear. Here is my react learning experience.</p>
-              <a target="_blank" href="https://twinkal.notion.site/My-Journey-to-learning-React-83df9aebbff94005bfc431d0d746ffb4"><p style="color:rgb(186, 176, 176); font-size: 15px;">Read more...</p></a> 
+              <p>From selling react developers in my sales career to learning the REACT, all I had at the starting point was fear. Here is my react learning experience...</p>
+            </a>
             </div>
-            <div class="card">
+          
+            <div class="card" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+              <a target="_blank" href="https://twinkal.notion.site/What-is-Local-Storage-2783da70c04c4aedbc928e3a071b9e46">
               <h1>What is Local Storage? </h1>
-              <p>I was so happy when I deployed my first project with database! And It was a local database, Yes! (funny)😜. Check out how to use Local Storage.</p>
-              <a target="_blank" href="https://twinkal.notion.site/What-is-Local-Storage-2783da70c04c4aedbc928e3a071b9e46"><p style="color:rgb(186, 176, 176); font-size: 15px;">Read more...</p></a> 
+              <p>I was so happy when I deployed my first project with database! And It was a local database, Yes! (funny)😜. Check out how to use Local Storage...</p>
+            </a>
             </div>
-            <div class="card">
+            <div class="card" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/links-images-about-file-paths/cover.jpg')">
+              <a target="_blank" href="https://twinkal.notion.site/Class-Component-in-React-77103866c7f940d2aaecf75198aeabb5">
               <h1>Class Component in React</h1>
-              <p>Class Component is no more in use after react launched functional components. Still, some of old codebase use it so having a basic knowledge of it keeps you in safe side. </p>
-              <a target="_blank" href="https://twinkal.notion.site/Class-Component-in-React-77103866c7f940d2aaecf75198aeabb5"><p style="color:rgb(186, 176, 176); font-size: 15px;">Read more...</p></a> 
+              <p>Class Component is no more in use after react launched functional components. Still, some of old codebase use it so having a basic knowledge of it keeps you in safe side... </p>
+            </a>
             </div>
             
         </div>
