--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <h3>Meme Generator</h3>
                     <p class="blackbox">
                         
-                    Interesting Meme Generator that allows your to create your own meme. Click on the button to get a new meme image and write down your thoughts on it to generate a brand new Meme ! It's simple with minmum design but very helpful for new typing learners. A link looks like
+                    Interesting Meme Generator that allows you to create your own meme. Click on the button to get a new meme image and write down your thoughts on it to generate a brand new Meme ! A link looks like
                         <a target="_blank" href="https://meme-generator.twinkal.xyz/">this</a>.
                     </p>
                     <h4>Technologies used include:</h4>
