--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
     <div class="padding-body">
         <section id="intro">
             <p class="name">Hi, my name is <span>Twinkal.</span></p>
-            <h2>I am front-end developer.</h2>
-            <p>I'm learning Website Development using HTML, CSS and JavaScript and React.js</p>
-            <p>I'm self taught front-end developer. Currently, I'm learning website development with online free different courses like Scrimba, freeCodeCamp and Youtube videos. It's new and very exciting journey for me as I am switching my career from IT sales
-                to
-                Software development.</p>
+            <h2>I am Self-Taught front-end developer.</h2>
+            <p>I'm learning front-end Development using HTML, CSS, JavaScript and React.js. Currently looking for an opportunity to leverage my skills in the frontend domain.</p>
         </section>
     </div>
     <div class="gradient"></div>
