--- a/Blogs.html
+++ b/Blogs.html
@@ -47,7 +47,7 @@
             <span class="sr-only">Github</span></a
           >
         </li>
-        <li><a href="#" class="button">Resume</a></li>
+        <li><a href="/Twinkal-resume.pdf" class="button">Resume</a></li>
       </ul>
     </nav>
     <main>
