--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a target="_blank" href="https://github.com/twinkalp10">
                     <span class="fab fa-github-square" aria-hidden="true"></span>
                     <span class="sr-only">Github</span></a></li>
-            <li><a href="#" class="button">Resume</a></li>
+            <li><a href="/Twinkal-resume.pdf" class="button">Resume</a></li>
         </ul>
     </nav>
 
